--- a/scss/skins/_art-deco.scss
+++ b/scss/skins/_art-deco.scss
@@ -245,7 +245,7 @@
 
 /* File header border */
 @container style(--art-deco-style-file-header: enable) {
-    .fas-skin-art-deco .mod-root .workspace-leaf-content {
+    .fas-skin-art-deco .mod-root .workspace-leaf-content .view-header {
         --file-header-border: 1px solid var(--art-deco-color);
 
         &::after {
@@ -255,14 +255,14 @@
             left: 0;
             right: 0;
             height: 40px;
-            top: calc(var(--header-height) - 9px);
+            bottom: 0;
             background-image: var(--art-deco-gradient);
             mask-image: var(--art-deco-bottom-frame);
             mask-size: auto 40px;
             mask-position: center;
             mask-repeat: no-repeat;
             z-index: 10;
-            transform: scaleY(-1);
+            transform: scaleY(-1) translateY(calc(-100% + 6px));
         }
     }
 }
