--- a/scss/skins/_art-deco.scss
+++ b/scss/skins/_art-deco.scss
@@ -309,6 +309,7 @@ $fwi_sel: "";
                     [data-callout="film-strip"],
                     #{$fwi_sel},
                     [data-callout="grid"],
+                    [data-callout="infobox"],
                     [data-callout="fas-infobox"],
                     [data-callout="letter"],
                     [data-callout="masonry"],
@@ -324,6 +325,7 @@ $fwi_sel: "";
                     [data-callout="autopsy"],
                     [data-callout="comic"],
                     [data-callout="email"],
+                    [data-callout="infobox"],
                     [data-callout="fas-infobox"],
                     [data-callout="timeline"]
                 )
