--- a/scss/_style-settings.scss
+++ b/scss/_style-settings.scss
@@ -698,6 +698,14 @@ settings:
         default: 2
         min: 1
         max: 4
+    -
+        id: metadata-label-width
+        title: Label width
+        description: The width of the properties labels (also called keys, or names)
+        type: variable-number
+        default: 9
+        format: em
+
 
     - 
         id: table
