--- a/scss/editor/code/_code_styling.scss
+++ b/scss/editor/code/_code_styling.scss
@@ -1,4 +1,10 @@
-.cm-hmd-codeblock,
-code {
-    max-width: 80ch;
+body {
+    --limit-code-to-80-chars: enable;
+}
+
+@container style(--limit-code-to-80-chars: enable) {
+    code {
+        max-width: 80ch;
+        display: block;
+    }
 }
